--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ body {
 .movie-card h1 {
     padding-left:10px;
     font-size:18px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Roboto, "Source Han Serif SC VF", sans-serif;
     font-weight:lighter;
 }
 .movie-card p {
     padding-left: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, "Source Han Serif SC VF", sans-serif;
     color: lightgray;
 }
 #search-bar {
@@ -35,7 +35,7 @@ body {
 }
 #search-bar h1 {
     font-size: 22px;
-    font-family: Impact,Haettenschweiler,'Arial Narrow Bold', sans-serif;
+    font-family:Roboto, "Source Han Serif SC VF", sans-serif;
     background-color: #f4c518;
     padding: 5px 8px 5px 8px;
     border-radius: 5px
@@ -43,14 +43,14 @@ body {
 #search-bar input{
     margin-left:20px;
     height:30px;
-    width:700px;
+    width:50vw;
     border-radius:5px
 }
 
 #category-title {
     margin-left: 20vw;
     color: #f4c518;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Roboto, "Source Han Serif SC VF", sans-serif;
 }
 
 
