--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,7 @@ header {
     align-items: center;
     padding: 30px 100px;
     transition: 0.5s;
+    z-index: 200;
 }
 .logo {
     color: wheat;
@@ -79,10 +80,76 @@ header {
 #search-bar input::placeholder {
     color: #222222;
 }
+/* 轮播图 */
+.slideShow {
+    margin: auto;
+    margin-top: 160px;
+    width: 1000px;
+    height: 560px;
+    /* border: 1px solid white; */
+    position: relative;
+}
 
+/* 5张图片叠加到一块 */
+.slideShow img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+    border-radius: 5px;
+    box-shadow: 5px 5px 35px rgba(41, 41, 41, 0.836);
+}
 
+.slideShow img:nth-of-type(1) {
+    display: block;
+}
+
+/* 小圆点 */
+.btn {
+    width: 150px;
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    left: 430px;
+    bottom: 10px;
+    z-index: 100
+}
+
+.btn span {
+    display: block;
+    width: 15px;
+    height: 15px;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+/* 左右箭头 */
+.slideShow a {
+    text-decoration: none;
+    font-size: 50px;
+    color: rgba(252, 252, 252, 0.733);
+    position: absolute;
+    top: 42%;
+}
+/* nth-of-type段数指定 */
+.slideShow a:nth-of-type(1) {
+    left: 10px;
+
+}
+
+.slideShow a:nth-of-type(2) {
+    right: 10px;
+}
+
+.active {
+    background-color: rgb(255, 255, 255);
+}
+
+/* 内容 */
 .content{
-    margin-top: 18vh;
+    margin-top: 90px;
 }
 #movies-grid {
     display: grid;
@@ -113,19 +180,7 @@ header {
     font-family: Roboto, "Source Han Serif SC VF", sans-serif;
     color: lightgray;
 }
-/* 
-#search-bar {
-    margin-left: 20vw;
-    display: flex;
-    align-items: center;
-}
-#search-bar input{
-    margin-left:20px;
-    height:30px;
-    width:50vw;
-    border-radius:5px;
-    font-family:Roboto, "Source Han Serif SC VF", Helvetica,sans-serif;
-} */
+
 
 #category-title {
     margin-left: 19vw;
